<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_paste_input"
        android:title="@string/action_paste_input"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy_output"
        android:title="@string/action_copy_output"
        app:showAsAction="never"/>

    <!-- Disabling "Help" and "About" items due to time constraints. -->
    <!--<item-->
        <!--android:id="@+id/action_help"-->
        <!--android:title="@string/action_help"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/action_about"-->
        <!--android:title="@string/action_about"-->
        <!--app:showAsAction="never" />-->

</menu>